fix grid bleeding link

--- a/styles.css
+++ b/styles.css
@@ -155,8 +155,8 @@ article {
     grid-template-columns: 1fr;
     grid-template-rows: auto auto auto;
     align-items: start;
-    height: 100%;
-    padding: 15px
+    height: 250px;
+    padding: 15px;
 }
 
 .foot-link{
